# academic-observatory-workflows

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  config-example.yaml  deploy-test.sh  deploy.sh  flask-Dockerfile  flask-app.py  ftp-server-Dockerfile  ftp-server.py  http-server-Dockerfile  http-server.py  packages.txt  requirements.sh  requirements.txt  setup.cfg  strategy.ini  test-env-compose.yaml  test-env-down.sh  test-env-up.sh  test-konfig.yaml
academic-observatory-workflows/: pyproject.toml
academic-observatory-workflows/academic_observatory_workflows/: config.py  logos.py  model.py  wikipedia.py  zenodo.py
academic-observatory-workflows/academic_observatory_workflows/crossref_fundref_telescope/: crossref_fundref_telescope.py  release.py  tasks.py  telescope.py
academic-observatory-workflows/academic_observatory_workflows/crossref_fundref_telescope/schema/: crossref_fundref_2014-03-01.json
academic-observatory-workflows/academic_observatory_workflows/crossref_fundref_telescope/tests/: test_crossref_fundref_telescope.py  test_tasks.py  test_telescope.py
academic-observatory-workflows/academic_observatory_workflows/crossref_metadata_telescope/: crossref_metadata_telescope.py  release.py  tasks.py  telescope.py
academic-observatory-workflows/academic_observatory_workflows/crossref_metadata_telescope/schema/: crossref_metadata_2021-11-07.json  crossref_metadata_2022-03-07.json  crossref_metadata_2025-02-07.json
academic-observatory-workflows/academic_observatory_workflows/crossref_metadata_telescope/tests/: test_crossref_metadata_telescope.py  test_tasks.py  test_telescope.py
academic-observatory-workflows/academic_observatory_workflows/data_citation_corpus_telescope/: README.md
academic-observatory-workflows/academic_observatory_workflows/data_citation_corpus_telescope/schema/: data_citation_corpus.json
academic-observatory-workflows/academic_observatory_workflows/data_quality_workflow/: data_quality_workflow.py
academic-observatory-workflows/academic_observatory_workflows/data_quality_workflow/tests/: test_data_quality_workflow.py
academic-observatory-workflows/academic_observatory_workflows/datacite_telescope/: README.md  datacite_transform.py
academic-observatory-workflows/academic_observatory_workflows/datacite_telescope/schema/: datacite.json
academic-observatory-workflows/academic_observatory_workflows/doi_workflow/: doi_workflow.py  queries.py  release.py  tasks.py  workflow.py
academic-observatory-workflows/academic_observatory_workflows/doi_workflow/schema/: book.json
academic-observatory-workflows/academic_observatory_workflows/doi_workflow/sql/: create_aggregate_base.sql.jinja2  create_aggregate_doi_flat.sql.jinja2  create_aggregate_final.sql.jinja2  create_aggregate_relation.sql.jinja2  create_openaccess_repo_names.sql.jinja2  crossref_events.sql.jinja2  doi.sql.jinja2  open_citations.sql.jinja2  openaccess.sql.jinja2  openalex.sql.jinja2  orcid.sql.jinja2  ror.sql.jinja2
academic-observatory-workflows/academic_observatory_workflows/doi_workflow/tests/: test_doi_workflow.py  test_queries.py  test_workflow.py
academic-observatory-workflows/academic_observatory_workflows/fixtures/crossref_events/: run1-responses.json  run2-expected.json  run2-responses.json
academic-observatory-workflows/academic_observatory_workflows/fixtures/crossref_fundref/: get_release_info.yaml
academic-observatory-workflows/academic_observatory_workflows/fixtures/doi/: country.csv
academic-observatory-workflows/academic_observatory_workflows/fixtures/ror/: list_ror_records.yaml
academic-observatory-workflows/academic_observatory_workflows/fixtures/wikipedia/: expected_fetch_wiki_descriptions.json  test_fetch_wiki_description.yaml
academic-observatory-workflows/academic_observatory_workflows/oa_dashboard_workflow/: institution_ids.py  oa_dashboard_workflow.py  release.py  tasks.py  workflow.py
academic-observatory-workflows/academic_observatory_workflows/oa_dashboard_workflow/schema/: logos.json
academic-observatory-workflows/academic_observatory_workflows/oa_dashboard_workflow/sql/: country.sql.jinja2  institution.sql.jinja2
academic-observatory-workflows/academic_observatory_workflows/oa_dashboard_workflow/tests/: test_oa_dashboard_workflow.py  test_workflow.py
academic-observatory-workflows/academic_observatory_workflows/openalex_telescope/: generate_schema.py  openalex_telescope.py  release.py  tasks.py  telescope.py
academic-observatory-workflows/academic_observatory_workflows/openalex_telescope/schema/: authors.json  concepts.json  domains.json  fields.json  funders.json  institutions.json  publishers.json  sources.json  subfields.json  topics.json  works.json
academic-observatory-workflows/academic_observatory_workflows/orcid_telescope/: batch.py  orcid_telescope.py  release.py  tasks.py  telescope.py
academic-observatory-workflows/academic_observatory_workflows/orcid_telescope/schema/: orcid.json  (+1 more)
academic-observatory-workflows/academic_observatory_workflows/pubmed_telescope/: datafile.py  pubmed_telescope.py  release.py  tasks.py  telescope.py
academic-observatory-workflows/academic_observatory_workflows/ror_telescope/: release.py  ror_telescope.py  tasks.py  telescope.py
academic-observatory-workflows/academic_observatory_workflows/scopus_telescope/: release.py  scopus_telescope.py  tasks.py  telescope.py
academic-observatory-workflows/academic_observatory_workflows/tests/: test_clearbit.py  test_logos.py  test_s5cmd.py  test_wikipedia.py  test_zenodo.py
academic-observatory-workflows/academic_observatory_workflows/unpaywall_telescope/: release.py  tasks.py  telescope.py  unpaywall_telescope.py
academic-observatory-workflows/academic_observatory_workflows/workflows/: crossref_fundref_telescope.py  crossref_metadata_telescope.py  geonames_telescope.py  open_citations_telescope.py  openalex_telescope.py  orcid_telescope.py  pubmed_telescope.py  ror_telescope.py  unpaywall_telescope.py  web_of_science_telescope.py
(+602 files in other folders)
