[metadata]
name = academic-observatory-workflows
author = Curtin University
author_email = agent@observatory.academy
summary = Academic Observatory Workflows provides Apache Airflow Workflows for fetching, processing and analysing data about academic institutions.
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/The-Academic-Observatory/academic-observatory-workflows
project_urls =
    Bug Tracker = https://github.com/The-Academic-Observatory/academic-observatory-workflows/issues
    Documentation = https://academic-observatory-workflows.readthedocs.io/en/latest/
    Source Code = https://github.com/The-Academic-Observatory/academic-observatory-workflows
python_requires = >=3.7
license = Apache License Version 2.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    science
    data
    workflows
    academic institutes
    academic-observatory-workflows

[files]
packages =
    academic_observatory_workflows
data_files =
    requirements.txt = requirements.txt
    requirements.sh = requirements.sh
    academic_observatory_workflows/database = academic_observatory_workflows/database/*
    academic_observatory_workflows/workflows/data = academic_observatory_workflows/workflows/data/*

[extras]
tests =
    liccheck>=0.4.0,<1
    flake8>=7,<8
    coverage>=7,<8
    vcrpy>=6,<7
    Faker>=8,<25
    boto3>=1.15.0,<2

[pbr]
skip_authors = true
