[build-system]
requires = ["setuptools>=44", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-observatory-workflows"
version = "1.0.0"
description = "Academic Observatory Workflows provides Apache Airflow Workflows for fetching, processing and analysing data about academic institutions."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["science", "data", "workflows", "academic institutes", "academic-observatory-workflows"]
authors = [{ name = "Curtin University", email = "agent@observatory.academy" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "xmltodict>=0.12.0,<1",
    "backoff>=2,<3",
    "ratelimit>=2.2.0,<3",
    "wos>=0.2.5,<1",
    "pandas>=1.3,<3",
    "beautifulsoup4>=4.9.3,<5",
    "boto3>=1.15.0,<2",
    "nltk>=3,<4",
    "Deprecated>=1,<2",
    "limits>=3,<4",
    "biopython>=1.81,<2",
    "glom>=23.0.0,<24"
]

[project.optional-dependencies]
test = [
    "liccheck==0.4.*",
    "flake8==3.8.*",
    "coverage==5.2",
    "vcrpy==4.0.*",
    "Faker==8.1.*",
    "boto3>=1.15.0,<2"
]

[project.urls]
"Homepage" = "https://github.com/The-Academic-Observatory/academic-observatory-workflows"
"Bug Tracker" = "https://github.com/The-Academic-Observatory/academic-observatory-workflows/issues"
"Documentation" = "https://academic-observatory-workflows.readthedocs.io/en/latest/"
"Source" = "https://github.com/The-Academic-Observatory/academic-observatory-workflows"
"Repository" = "https://github.com/The-Academic-Observatory/academic-observatory-workflows"
