[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-observatory-workflows"
version = "1.0.0"
description = "Academic Observatory Workflows provides Apache Airflow Workflows for fetching, processing and analysing data about academic institutions."
requires-python = "==3.13"
license = { text = "Apache-2.0" }
keywords = ["science", "data", "workflows", "academic institutes", "academic-observatory-workflows"]
authors = [{ name = "Curtin University", email = "agent@observatory.academy" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "xmltodict>=1.0,<2",
    "backoff>=2,<3",
    "ratelimit>=2.2.0,<3",
    "pandas>=1.3,<3",
    "beautifulsoup4>=4.9.3,<5",
    "boto3>=1.15.0,<2",
    "nltk>=3.9.1,<4",
    "Deprecated>=1,<2",
    "limits>=5,<6",
    "biopython>=1.81,<2",
    "glom>=23.0.0,<24",
    "bigquery-schema-generator>=1.6.1,<2",
    "deepdiff>=8,<9",
    "lxml>=6,<7"
]

[project.optional-dependencies]
tests = [
    "httpretty>=1,<2",
    "flake8>=6.0.0,<7",
    "coverage>=7,<8",
    "vcrpy>=8,<9",
    "Faker>=37,<38",
    "boto3>=1.15.0,<2",
    "toml>=0.10.0"
]

licences = [
    "licensecheck==2026.0.8"
]

[project.urls]
"Homepage" = "https://github.com/The-Academic-Observatory/academic-observatory-workflows"
"Bug Tracker" = "https://github.com/The-Academic-Observatory/academic-observatory-workflows/issues"
"Documentation" = "https://academic-observatory-workflows.readthedocs.io/en/latest/"
"Source" = "https://github.com/The-Academic-Observatory/academic-observatory-workflows"
"Repository" = "https://github.com/The-Academic-Observatory/academic-observatory-workflows"

[tool.setuptools.packages.find]
include = ["academic_observatory_workflows"]

[tool.setuptools.package-data]
"academic_observatory_workflows" = ["**/schema/*.json"]

[tool.pyright]
typeCheckingMode = "off"

[tool.licensecheck]
only_licenses = [
    # Unencumbered licenses: https://opensource.google/docs/thirdparty/licenses/#unencumbered
    "public domain <http://unlicense.org>",
    "cc0 1.0 universal (cc0 1.0) public domain dedication",
    # Notice licenses: https://opensource.google/docs/thirdparty/licenses/#notice
    "artistic",
    "apache software license 2.0",
    "apache license version 2.0",
    "apache license, version 2.0",
    "apache license 2.0",
    "apache 2.0",
    "apache-2.0",
    "apache software",
    "apache 2",
    "apache-2",
    "bsd",
    "bsd-2-clause",
    "bsd-3-clause",
    "3-clause bsd",
    "new bsd",
    "bsd or apache license, version 2.0",
    "bsd-2-clause or apache-2.0",
    "isc license (iscl)",
    "isc",
    "mit",
    "python software foundation",
    "psf-2.0",
    "psfl",
    "zpl 2.1",
    # Reciprocal licenses: https://opensource.google/docs/thirdparty/licenses/#reciprocal
    "mozilla public license 1.1 (mpl 1.1)",
    "mozilla public license 2.0 (mpl 2.0)",
    "mpl-2.0",
    # LGPL
    "lgpl",
    "gnu library or lesser general public license (lgpl)",
    "gnu lesser general public license v3 or later (lgplv3+)",
    "lgplv3+",
    "the unlicense (unlicense)",
    "apache-2.0 and mit",
    "mit and psf-2.0",
]
fail_licenses = [
    # Restricted licenses: https://opensource.google/docs/thirdparty/licenses/#restricted
    "gpl v1",
    "gpl v2",
    "gpl v3",
    # Banned licenses: https://opensource.google/docs/thirdparty/licenses/#banned
    "agpl",
    "affero gpl",
    "agpl (affero gpl)",
    "sspl"
]
zero = true # Report nonzero exit code on failure
ignore_packages=[
    # MIT license: https://pypi.org/project/ordereddict/1.1/
    "ordereddict",
    # MIT license: https://pypi.org/project/pendulum/1.4.4/
    "pendulum",
    # Python Imaging Library (PIL) License: https://github.com/python-pillow/Pillow/blob/master/LICENSE
    "pillow",
    # Precipy was developed for the project, a license will be added to the repo shortly
    "precipy",
    # BSD-3. License: https://github.com/biopython/biopython/blob/master/LICENSE.rst
    "biopython"
]
